@@ -1,16 +1,15 @@
 package se.kth.iv1350.repairelectricbike.integration;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.*;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 
 import org.junit.Before;
 import org.junit.Test;
 
-import se.kth.iv1350.repairelectricbike.integration.*;
+import se.kth.iv1350.repairelectricbike.model.RepairOrder;
 
 public class RepairOrderRegistryTest {
     private RegistryCreator creator;
@@ -18,33 +17,40 @@ public class RepairOrderRegistryTest {
     private RepairOrderDTO repairOrder; 
     private List<BikeDTO> bikes;
 
+    private RepairOrderRegistry repairOrderRegistry;
+
     @Before
     public void setUp() {
         creator = new RegistryCreator();
         bikes = new ArrayList<BikeDTO>( List.of(new BikeDTO("Disktrasa", "Yes", "123Drygt")));
         customer = new CustomerDTO("Frödinge", "ost@kaka.se", "112", bikes);
-        repairOrder = new RepairOrderDTO(0, customer, bikes.get(0), "Bell is broken", LocalDate.now(), State.NEWLY_CREATED, null);
+        repairOrder = new RepairOrder(customer, "123Drygt", "Bell is broken").convertToDTO();
 
-        creator.getCustomerRegistry().addCustomer(customer);
-        creator.getRepairOrderRegistry().addRepairOrder(repairOrder);
+        CustomerRegistry customerRegistry = creator.getCustomerRegistry();
+        repairOrderRegistry = creator.getRepairOrderRegistry();
+
+        customerRegistry.addCustomer(customer);
+        repairOrderRegistry.addRepairOrder(repairOrder);
     }
 
     
     @Test
     public void testAddRepairOrder() {
-        RepairOrderDTO newRepairOrder = new RepairOrderDTO(1, customer, bikes.get(0), "Bell is broken again", LocalDate.now(), State.NEWLY_CREATED, null);
-        creator.getRepairOrderRegistry().addRepairOrder(newRepairOrder);
-        List<RepairOrderDTO> repairOrders = creator.getRepairOrderRegistry().findRepairOrders(State.NEWLY_CREATED);
+        RepairOrderDTO newRepairOrder = new RepairOrder(customer, "123Drygt", "Bell is broken again").convertToDTO();
+        repairOrderRegistry.addRepairOrder(newRepairOrder);
+        List<RepairOrderDTO> repairOrders = repairOrderRegistry.findRepairOrders(State.NEWLY_CREATED);
         
         assertEquals(2, repairOrders.size());
+        boolean result = repairOrder.equals(repairOrders.get(0));
+        assertTrue(result );
     }
 
     @Test
     public void testFindRepairOrders() {
-        List<RepairOrderDTO> repairOrders = creator.getRepairOrderRegistry().findRepairOrders(State.NEWLY_CREATED);
+        List<RepairOrderDTO> repairOrders = repairOrderRegistry.findRepairOrders(State.NEWLY_CREATED);
 
         assertEquals(1, repairOrders.size());
-        assertEquals(State.NEWLY_CREATED, repairOrders.get(0).getState());
+        assertEquals(State.NEWLY_CREATED, repairOrders.getFirst().getState());
     }
 
     // EEEEH 8 = 1?!?!?!?!?!?!?!?!
@@ -57,33 +63,32 @@ public class RepairOrderRegistryTest {
 
     @Test
     public void testGetRepairOrderDTObyID() {
-        RepairOrderDTO result = creator.getRepairOrderRegistry().getRepairOrderDTObyID(0);
-
-        Objects.equals(repairOrder, result);
+        boolean result = repairOrder.equals(repairOrderRegistry.getRepairOrderDTObyID(0));
+        assertTrue(result);
     }
 
     @Test
     public void testUpdateCompletionDate() {
         LocalDate newDate = LocalDate.of(2026, 04, 29);
-        creator.getRepairOrderRegistry().updateCompletionDate(0, newDate);
+        repairOrderRegistry.updateCompletionDate(0, newDate);
 
-        assertEquals(newDate, creator.getRepairOrderRegistry().getRepairOrderDTObyID(0).getDate());
-
+        assertEquals(newDate, repairOrderRegistry.getRepairOrderDTObyID(0).getDate());
     }
 
     @Test
-    public void testUpdateDiagnosticReport() {
-        
-
+    public void testUpdateDiagnosticResult() {
+        String newDiagnosticResult = "Problem solved";
+        repairOrderRegistry.updateDiagnosticResult(0, newDiagnosticResult);
+        assertEquals(newDiagnosticResult, repairOrderRegistry.getRepairOrderDTObyID(0).getDiagnosticReport().getDiagnosticResult());
     }
 
     @Test
     public void testUpdateState() {
         State newState = State.ACCEPTED;
 
-        creator.getRepairOrderRegistry().updateState(0, newState);
+        repairOrderRegistry.updateState(0, newState);
 
-        assertEquals(newState, creator.getRepairOrderRegistry().getRepairOrderDTObyID(0).getState());
+        assertEquals(newState, repairOrderRegistry.getRepairOrderDTObyID(0).getState());
 
     }
 }
